fix: some issues with the configuration files